<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    //  회원가입

    <TextView
        android:id="@+id/joinTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="113dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="114dp"
        android:text="@string/join"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    //  이름

    <TextView
        android:id="@+id/name_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="33dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="332dp"
        android:text="@string/name"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/joinTextView" />

    //  이름 입력
    <EditText
        android:id="@+id/name_EditText"
        android:layout_width="345dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="33dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="33dp"
        android:hint="@string/name_Input"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_TextView"
        tools:targetApi="o" />

    //  이메일
    <TextView
        android:id="@+id/email_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="33dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="308dp"
        android:text="@string/email"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_EditText" />

    //  이메일 입력
    <EditText
        android:id="@+id/email_EditText"
        android:layout_width="345dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="33dp"
        android:layout_marginTop="5dp"
        android:hint="@string/email_Input"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_TextView"
        tools:targetApi="o" />

    //  비밀번호
    <TextView
        android:id="@+id/password_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="33dp"
        android:layout_marginTop="10dp"
        android:text="@string/password"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_EditText" />

    //  영문,숫자,특수문자 조합으로 4~16자리 입력
    <EditText
        android:id="@+id/password_EditText"
        android:layout_width="345dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="33dp"
        android:layout_marginTop="5dp"
        android:hint="@string/password_Pattern"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_TextView"
        tools:targetApi="o" />

    //  비밀번호 확인
    <TextView
        android:id="@+id/password_TextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="33dp"
        android:layout_marginTop="10dp"
        android:text="@string/password_check"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_EditText" />

    //  비밀번호 입력
    <EditText
        android:id="@+id/password_EditText2"
        android:layout_width="345dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="33dp"
        android:layout_marginTop="5dp"
        android:hint="@string/password_Input"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_TextView2"
        tools:targetApi="o" />

    //  회원가입 버튼

    <Button
        android:id="@+id/join_Button"
        android:layout_width="345dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="33dp"
        android:layout_marginTop="53dp"
        android:layout_marginEnd="33dp"
        android:layout_marginBottom="80dp"
        android:background="#3E423A"
        android:onClick="singUp"
        android:text="@string/join"
        android:textColor="#fff"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_EditText2" />

</androidx.constraintlayout.widget.ConstraintLayout>